--- a/package.json
+++ b/package.json
@@ -1,57 +1,56 @@
 {
-  "version": "0.3.0",
-  "name": "@kun96/utils",
-  "main": "./cs/index.js",
-  "types": "./cs/index.d.ts",
-  "module": "./es/browser.js",
-  "browser": "./cs/browser.js",
-  "jsnext:main": "./es/browser.js",
-  "author": {
-    "name": "Hu Kun",
-    "email": "mrhukun@gmail.com"
+  "version": "0.0.5",
+  "name": "@huk.io/toolkit",
+  "author": "Hu Kun",
+  "sideEffects": false,
+  "type": "module",
+  "types": "types/index.d.ts",
+  "engines": {
+    "node": ">=16.0.0"
   },
   "scripts": {
-    "prebuild:es": "rm -rf ./es",
-    "prebuild:cs": "rm -rf ./cs",
-    "build:cs": "tsc",
-    "build:es": "tsc --build ./es-tsconfig.json",
-    "fix": "gts fix",
-    "compile": "npm run build:cs && npm run build:es"
+    "test": "jest --coverage",
+    "test:coverage": "jest --coverage",
+    "tree": "tree -L 3 -I \"node_modules\""
   },
-  "homepage": "https://github.com/kun86/ts-utils",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   },
-  "description": "util list",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/kun96/utils"
-  },
   "license": "MIT",
   "dependencies": {
+    "@types/qs": "^6.9.7",
     "bcryptjs": "^2.4.3",
     "crypto-browserify": "^3.12.0",
     "jsonwebtoken": "^8.5.1",
-    "node-forge": "^0.9.1",
-    "node-rsa": "^1.0.8",
-    "query-string": "^6.13.5",
+    "node-forge": "^1.3.1",
+    "node-rsa": "^1.1.1",
+    "qs": "^6.10.3",
+    "query-string": "^7.1.1",
     "randombytes": "^2.1.0",
-    "svg-captcha": "^1.4.0",
-    "@peculiar/webcrypto": "^1.1.7"
+    "svg-captcha": "^1.4.0"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^8.5.0",
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.2.196",
+    "@peculiar/webcrypto": "^1.4.0",
+    "@swc/jest": "^0.2.21",
+    "@types/jest": "^28.1.6",
     "@types/bcryptjs": "^2.4.2",
-    "@types/node-forge": "^0.9.4",
-    "@types/node-rsa": "^1.0.0",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/node": "^17.0.39",
+    "@types/node-forge": "^1.0.2",
+    "@types/node-rsa": "^1.1.1",
     "@types/randombytes": "^2.0.0",
-    "@types/node": "^16.10.3",
-    "@types/react": "^17.0.27",
-    "gts": "^2.0.2"
+    "@types/react": "^18.0.11",
+    "dayjs": "^1.11.2",
+    "esbuild": "^0.14.42",
+    "jest": "^28.1.3",
+    "typescript": "4.7.1-rc"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
-    "typescript": "^3.8.3",
-    "chalk": "^4.1.2"
+    "@peculiar/webcrypto": "^1.4.0",
+    "chalk": "^4.1.2",
+    "dayjs": "^1.11.2",
+    "react": "^17.0.2"
   }
 }
