--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,17 @@
 {
-  "extends": "./node_modules/gts/tsconfig-google.json",
   "compilerOptions": {
-    "target": "es2015",
-    "module": "commonjs",
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "rootDir": "./src",
+    "target": "es2020",
+    "module": "esnext",
     "moduleResolution": "Node",
-    "outDir": "./cs",
-    "allowSyntheticDefaultImports": true,
-    "lib": [
-      "dom"
-    ]
+    "esModuleInterop": true,
+    "isolatedModules": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "declarationDir": "./types",
+    "declaration": true,
+    "outDir": "./lib",
+    "types": ["jest"]
   },
-  "include": [
-    "./src"
-  ]
+  "exclude": ["**/*.test.ts", "types"]
 }
